--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                         weight: 1,
                         opacity: 1,
                         color: '#004D40',
-                        fillColor: '#004D40',
-                        fillOpacity: 0.1
+                        fillColor: '#e0f2f1',
+                        fillOpacity: 0.3
                     },
                     selected: {
                         stroke: true,
