added houses and companies

--- a/index.html
+++ b/index.html
@@ -312,6 +312,67 @@
                         nameSingular: "Name"
                     }
                 }
+            },
+            'companies': {
+                name: "Companies",
+                nameSingular: "Company",
+                zIndex: 1013,
+                selectedZIndex: 3014,
+                style: {
+                    normal: {
+                        weight: 2,
+                        color: '#1A237E',
+                        //dashArray: '3',
+                        fillOpacity: 0.0
+                    },
+                    selected: {
+                        weight: 2.5,
+                        //color: '#e0f2f1',
+                        color: '#9FA8DA',
+                        dashArray: '',
+                    }
+                },
+                clickThrough: true,
+                properties: {
+                    "name": {
+                        nameSingular: "Name"
+                    }
+                }
+            },
+            'houses': {
+                name: "Houses",
+                nameSingular: "House",
+                zIndex: 1013,
+                selectedZIndex: 3014,
+                style: {
+                    normal: {
+                        weight: 2,
+                        color: '#1A237E',
+                        //dashArray: '3',
+                        fillOpacity: 0.0
+                    },
+                    selected: {
+                        weight: 2.5,
+                        //color: '#e0f2f1',
+                        color: '#9FA8DA',
+                        dashArray: '',
+                    }
+                },
+                clickThrough: true,
+                properties: {
+                    "name": {
+                        nameSingular: "Name"
+                    },
+                    "costs-building": {
+                        nameSingular: "Costs Building"
+                    },
+                    "costs-property": {
+                        nameSingular: "Costs Property"
+                    },
+                    "url": {
+                        nameSingular: "URL"
+                    }
+                }
             }
         };
 
