--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                 removeFeatureCollectionOfCountry(checkedFeatureCollectionCheckBox.value, layerCountry);
             });
 
-            updateCountryStyle(currentCountry);
+            updateCountryStyle(layerCountry);
         }
 
         function selectCountry(country) {
